---
source: src/config.rs
expression: file
info: services/gbn-beam-proxy.yml
input_file: tests/configs/example.config.toml
---
services:
  gbn-beam-proxy:
    image: docker.verbis.dkfz.de/cache/samply/beam-proxy:develop
    environment:
      BROKER_URL: https://broker.bbmri.de/
      PROXY_ID: dummy.broker.bbmri.de
      APP_focus_KEY: "${GBN_BEAM_PROXY_FOCUS_KEY}"
      ROOTCERT_FILE: /conf/root.crt.pem
      PRIVKEY_FILE: /run/secrets/proxy.pem
      TLS_CA_CERTIFICATES_DIR: /conf/trusted-ca-certs
      ALL_PROXY: http://forward-proxy:3128/
    volumes:
      - [TMP_DIR]/trusted-ca-certs:/conf/trusted-ca-certs:ro
    secrets:
      - proxy.pem
    configs:
      - source: gbn.root.crt.pem
        target: /conf/root.crt.pem

configs:
  gbn.root.crt.pem:
    content: |
      -----BEGIN CERTIFICATE-----
      MIIDNTCCAh2gAwIBAgIUckVOQQWZBTC0pWhn1X3lPxAWricwDQYJKoZIhvcNAQEL
      BQAwFjEUMBIGA1UEAxMLQnJva2VyLVJvb3QwHhcNMjMwOTA0MDkwMTQ0WhcNMzMw
      OTAxMDkwMjEzWjAWMRQwEgYDVQQDEwtCcm9rZXItUm9vdDCCASIwDQYJKoZIhvcN
      AQEBBQADggEPADCCAQoCggEBAOOD+CVvteBmu1hKV1QlfbHmiLCnuf6F+9k+1u/b
      6as6k7BURn8KZAxVLWSIwC6x2C7n9CHN9Jieb4DWpS0XmXQVUEpT1/yiLGBdxp2x
      nrbzm7caOunsWsPlGOcXPJKJpzAhcg58RDzXZ+2+shulSmsgPNlWBaLhNL5wj0sQ
      MzbwGVlGIJg18Ye/9WgQkO2ZcnTGb5cRsChKs4H43ZC34ZSSk7wqWg6P3e2xFam1
      YKXBOZzhwHoI4AxUQ+gd6upz5dqcwbaNZm10VP8fMac2dMLw9cOCS0ueDCS4viLd
      A69yds19AndBPMZhoEY1UHafjJ1uITRJQpaaB4vNliX+1rECAwEAAaN7MHkwDgYD
      VR0PAQH/BAQDAgEGMA8GA1UdEwEB/wQFMAMBAf8wHQYDVR0OBBYEFC74YIorSwWD
      /s5ozz3xvqUMDJ3qMB8GA1UdIwQYMBaAFC74YIorSwWD/s5ozz3xvqUMDJ3qMBYG
      A1UdEQQPMA2CC0Jyb2tlci1Sb290MA0GCSqGSIb3DQEBCwUAA4IBAQCzcIccBzYr
      sHCGTGsSyLGBYsuI5yl+hvFOitYTha/mC+XBxq2R6By2WzbfSZtyZkUtC/+FqdCY
      VtMSjbDVXtBgsabfqODBobHmPyOEmNUX4IGcyn06rdM+rHQRah98lF+PhiPPO42F
      9Wj8dkq4/Gf+Yarq31ZbY0sed2sEPZ/bV26Og8Ft9qip5gKwklyakAiCnDIq+QBd
      ltvng3g08AQM0o5KIphP2/WU0UoSk1YPVMjRxuLiFg8xvr2EdCQQ9oA7xbhrmAXe
      242HVW/7KokjmowyWTQlIUGnuGdCOtTl8h74eHTID0YWO68hHkA0J5Ox2j4dZxvw
      HRFTxAR1gGKX
      -----END CERTIFICATE-----

secrets:
  proxy.pem:
    file: [TMP_DIR]/pki/dummy.priv.pem
